# BigDefend

./: .gitignore  README.md  captured_data.csv  gui.py  hello.py  ids.py  model.joblib  packet_capture.py  pyproject.toml
app/: gui.py  packet_capture.py  train_model.py
scripts/: ids.py  packet_capture.py  train_model.py
