[project]
name = "bigdefend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.4.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pyside6>=6.8.2.1",
    "python-nmap>=0.7.1",
    "scapy>=2.6.1",
    "scikit-learn>=1.6.1",
]
